@@ -1,6 +1,8 @@
 2005-06-14  Bernhard Walle <bernhard.walle@gmx.de>
 	* Added schematic in Eagle format to both documentation paths
 	* Added schematic to the share/tfla-01/ path
+	* Critial bugfix: DataPlot::getNumberOfPossiblyDisplayedSamples()
+	  always returned 0
 
 2005-06-13  Bernhard Walle <bernhard.walle@gmx.de>
 	* Many bugfixes
